Atualização do codigo

--- a/Views/Inventario/Create.cshtml
+++ b/Views/Inventario/Create.cshtml
@@ -36,6 +36,11 @@
                 <span asp-validation-for="id_cliente" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="id_maquina" class="control-label"></label>
+                <input asp-for="id_maquina" class="form-control" />
+                <span asp-validation-for="id_maquina" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="quantidade" class="control-label"></label>
                 <input asp-for="quantidade" class="form-control" />
                 <span asp-validation-for="quantidade" class="text-danger"></span>
